@@ -32,6 +32,8 @@ MINOR CHANGES
 * `scale_shape` finally returns an error when you try and use it with a
   continuous variable
 
+* `stat_contour` no longer errors if all breaks outside z range (fixes #195).
+
 DEVELOPMENT
 
 * ggplot2 has moved away from the two (!!) homegrown documentation systems
